--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "inert": "^4.0.2",
     "joi": "^9.2.0",
     "mongoose": "^4.6.7",
+    "mongoose-seeder": "^1.2.1",
     "vision": "^4.1.0"
   }
 }
