--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "joi": "^9.2.0",
     "mongoose": "^4.6.7",
     "mongoose-seeder": "^1.2.1",
+    "multiparty": "^4.1.2",
     "vision": "^4.1.0"
   }
 }
